<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ContentDescription"
    >
  <TextView
      android:id="@+id/tvSource"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/source_photo"
      app:layout_constraintTop_toTopOf="parent"
      />
  <ImageView
      android:id="@+id/imageView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="fitXY"
      android:transitionName="@string/transitionNameImage"
      app:layout_constraintDimensionRatio="16:9"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvSource"
      tools:src="@color/colorPrimary"
      />
  <TextView
      android:id="@+id/tvBlur"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/blur_photo"
      app:layout_constraintTop_toBottomOf="@id/imageView"
      />
  <SeekBar
      android:id="@+id/seekBar"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="@id/tvBlur"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/tvBlur"
      app:layout_constraintTop_toTopOf="@id/tvBlur"
      />
  <ImageView
      android:id="@+id/ivBlur"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="16dp"
      android:scaleType="fitXY"
      android:transitionName="@string/transitionNameImage"
      app:layout_constraintDimensionRatio="16:9"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvBlur"
      tools:src="@color/colorPrimary"
      />


</android.support.constraint.ConstraintLayout>